2012-12-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Improve conditionally enabled state manipulation for menu items.

	* src/guidata.rc (IDM_REPO_APPLY): Set its initial state as GRAYED.

	* src/pkgdata.cpp (AppWindowMaker::UpdatePackageMenuBindings):
	[IDM_PACKAGE_REINSTALL]: Always leave it GRAYED; this is a temporary
	provision, until the GUI is updated to support "reinstall" capability.
	[IDM_REPO_APPLY && !(EnumeratePendingActions > 0)]: Make it GRAYED.
	[IDM_REPO_APPLY && (EnumeratePendingActions > 0)]: Enable it.

2012-12-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement GUI bindings for processing a schedule of actions.

	* src/guimain.h (IDD_DMH_CONSOLE): New resource ID; define it.
	(IDD_APPLY_EXECUTE): New dialogue template resource ID; define it.
	(AppWindowMaker::ExecuteScheduledActions): New method; declare it.

	* src/guidata.rc (IDD_APPLY_EXECUTE): Implement dialogue template.

	* src/guixmld.cpp (pkgApplyChanges): New thread function; implement it.
	(AppWindowMaker::OnCommand) [IDD_REPO_APPLY]: Use it; it is invoked...
	(IDD_APPLY_EXECUTE): ...via this dialogue box, subsequently calling...
	(AppWindowMaker::ExecuteScheduledActions): ...this; implement it.

	* src/pkgexec.cpp (pkgActionItem::Execute): Add argument; use it.
	(pkgActionItem::~pkgActionItem): Unlink chained references.

	* src/pkgbase.h (pkgActionItem::Execute): Adjust prototype.

2012-12-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Do not preserve unnecessary download requests.

	* src/pkginet.cpp (pkgActionItem::DownloadArchiveFiles):
	[(flags & ACTION_INSTALL) != ACTION_INSTALL]: Actions having no
	"install" effect do not require a download; cancel any associated
	download request.

2012-12-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement GUI bindings for package download agent.

	* src/guimain.h (IDD_PROGRESS_VAL, IDD_PROGRESS_MAX):
	(IDD_PROGRESS_PCT): New manifest resource IDs; define them.  They will